--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@
     margin-top: 0.5rem;
 }
 
+h3{
+    margin-bottom: 0rem;
+}
+
+#icons-type{
+    margin-left: 10px;
+}
+
 /* MAIN */
 main{
     background-color: rgb(221, 221, 221);
